--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mvbri/Javascript-Single-Page-Application-SPA#readme",
   "devDependencies": {
+    "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
